--- a/css/styles.css
+++ b/css/styles.css
@@ -210,3 +210,15 @@ a:active{
     flex-direction: column;
     text-align: center;
 }
+
+.fa {
+    padding: 20px;
+    font-size: 30px;
+    width: 50px;
+    text-align: center;
+    text-decoration: none;
+  }
+
+  .fa:hover {
+    opacity: 0.7;
+  }
