--- a/css/styles.css
+++ b/css/styles.css
@@ -20,10 +20,11 @@ body {
     display: flex;
     width: 100%;
     padding: 20px;
-}
+    background-color: #b0b0b0;
+}rgb(172, 172, 172)
 
 .page-header__item {
-    flex: 0 2 200px;
+    /* flex: 0 2 200px; */
 }
 
 .page-header__item:last-child {
