fixed style error

--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,7 @@ body {
     width: 100%;
     padding: 20px;
     background-color: #b0b0b0;
-}rgb(172, 172, 172)
+}
 
 .page-header__item {
     /* flex: 0 2 200px; */
