--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
     --secondary-color: #25ff51;
     --span-bg-color: #1b1a1a;
     --span-color: #ffdd1f;
+    --backgrond-color: #dedddb;
 }
 
 body {
@@ -14,13 +15,16 @@ body {
     font-weight: 400;
     font-size: 16px;
     line-height: 1.6;
+    background-color: var(--backgrond-color);
+    width: 80%;
+    margin: auto;
 }
 
 .page-header{
     display: flex;
     width: 100%;
     padding: 20px;
-    background-color: #b0b0b0;
+    background-color: var(--backgrond-color);
 }
 
 .page-header__item {
@@ -97,46 +101,6 @@ h1{
   }
 }
 
-/* animation of svg element starts here  */
-.sun {
-    animation-duration: 4s;
-    animation-name: color-change;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
-    animation-timing-function: linear;
-}
-
-.cloud-front {
-    animation: 30s cloud-move infinite alternate linear;
-}
-
-
-@keyframes color-change {
-    0% {
-      fill: #edc655;
-    }
-    50% {
-      fill: #fcffad;
-    }
-    100% {
-      fill: #f76714;
-    }
-}
-
-@keyframes cloud-move-reverse {
-    from {
-      transform: translate(446px, 48px);
-    }
-    to {
-      transform: translate(100px, 48px);
-    }
-}
-
-.cloud-back {
-    animation: 34s cloud-move-reverse infinite alternate linear;
-}
-
-/* animation of svg element starts here  */
 
 
 .profile{
@@ -220,3 +184,45 @@ a:active{
   .fa:hover {
     opacity: 0.7;
   }
+
+
+  /* animation of svg element starts here  */
+.sun {
+    animation-duration: 4s;
+    animation-name: color-change;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    animation-timing-function: linear;
+}
+
+.cloud-front {
+    animation: 30s cloud-move infinite alternate linear;
+}
+
+
+@keyframes color-change {
+    0% {
+      fill: #edc655;
+    }
+    50% {
+      fill: #fcffad;
+    }
+    100% {
+      fill: #f76714;
+    }
+}
+
+@keyframes cloud-move-reverse {
+    from {
+      transform: translate(446px, 48px);
+    }
+    to {
+      transform: translate(100px, 48px);
+    }
+}
+
+.cloud-back {
+    animation: 34s cloud-move-reverse infinite alternate linear;
+}
+
+/* animation of svg element ends here  */
