--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,8 @@
     box-sizing: border-box;
 }
 
+
+
 :root{
     --primary-color:#0089df;
     --secondary-color: #25ff51;
@@ -12,7 +14,7 @@
 }
 
 body {
-    font-family: 'Rubik', sans-serif;
+    font-family: 'Roboto Slab', serif;
     font-weight: 400;
     font-size: 16px;
     line-height: 1.6;
@@ -27,10 +29,6 @@ body {
     width: 100%;
     padding: 20px;
     background-color: var(--backgrond-color);
-}
-
-.page-header__item {
-    /* flex: 0 2 200px; */
 }
 
 .page-header__logo {
@@ -59,11 +57,6 @@ body {
     color: var(--navbar--header-text);
 }
 
-.section-title{
-    text-align: center;
-    color: var(--navbar--header-text);
-
-}
 
 .about__section{
     text-align: center;
@@ -78,6 +71,14 @@ body {
     width: 33%;
 }
    /* end grid fallback */
+
+
+.section-title{
+    text-align: center;
+    color: var(--navbar--header-text);
+
+}
+
 
 @supports (display: grid) {
     .project-list {
@@ -180,7 +181,6 @@ a:focus{
 
 a:active{
     color: var(--secondary-color);
-
 }
 
 .page-footer {
